# software_lab8

./: .gitignore  README.md  docker-compose.yml
notification-service/: Dockerfile  main.py  pyproject.toml
notification-service/adapters/rabbitmq/: rabbitmq_consumer.py
notification-service/adapters/senders/: console_sender.py
notification-service/models/: notification.py
notification-service/ports/: notification_sender.py
notification-service/services/: send_notification.py
notification-service/tests/: conftest.py
notification-service/tests/integration/: test_notification_consumer.py
notification-service/tests/unit/: test_console_sender.py  test_notification_model.py  test_rabbitmq_consumer_start_stop.py  test_send_notification_service.py
restaurant-service/: .env.example  Dockerfile  main.py  pyproject.toml  requirements.txt
restaurant-service/adapters/: dinner_cli.py
restaurant-service/adapters/api/: dinner_router.py
restaurant-service/adapters/rabbitmq/: rabbitmq_publisher.py
restaurant-service/adapters/repositories/: in_memory_dinner_repo.py  rabbitmq_publisher.py
restaurant-service/models/: client.py  dinner.py
restaurant-service/ports/: dinner_repository.py  event_publisher.py
restaurant-service/services/: register_dinner.py
restaurant-service/tests/: conftest.py
restaurant-service/tests/integration/: test_dinner_router.py
restaurant-service/tests/unit/: test_client_model.py  test_dinner_cli.py  test_dinner_model.py  test_dinner_router_coverage.py  test_dinner_router_error_handling.py  test_in_memory_dinner_repo.py  test_rabbitmq_publisher.py  test_register_dinner_service.py
rewards-service/: .env.example  Dockerfile  main.py  pyproject.toml  requirements.txt
rewards-service/adapters/rabbitmq/: rabbitmq_consumer.py
rewards-service/adapters/repositories/: in_memory_reward_repo.py  (+1 more)
rewards-service/models/: reward_account.py  reward_rule.py
rewards-service/ports/: notification_publisher.py  reward_repository.py
rewards-service/services/: calculate_cashback.py  calculate_points.py  process_reward.py
rewards-service/tests/: conftest.py
shared/: __init__.py  pyproject.toml
shared/events/: __init__.py  consumption_event.py
shared/messaging/: __init__.py  consumer.py  publisher.py
(+8 files in other folders)
