[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "notification-service"
version = "1.0.0"
description = "Microservicio de notificaciones - Lab8 UTEC"
requires-python = ">=3.11"
dependencies = [
    "pika>=1.3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "../shared"]

[tool.coverage.run]
source = ["notification"]

[tool.ruff]
line-length = 100
