[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "rewards-service"
version = "1.0.0"
description = "Microservicio de recompensas - Lab8 UTEC"
requires-python = ">=3.11"
dependencies = [
    "pika>=1.3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", ".."]

[tool.coverage.run]
source = ["rewards"]

[tool.ruff]
line-length = 100
